  o better C++ compiler support (for pointer conversions)
dyncallback:
  o PPC64 single-precision float fixes for more than 13 float args (thanks Masanori!)
  o MIPS o32 (big- and little-endian), EABI (32 bit, little-endian) and n64 (big-endian) support
  o SPARC32 (v7/v8) support
  o SPARC64 (v9) support
  o POSIX compliance: fallback for wx alloc on systems that don't have mmap()'s MAP_ANON
general:
  o marked assembly code as not needing an execstack, for safer/easier integration into other
    projects/builds, where needed; this is needed b/c of questionable default behaviours of some
    toolchains (thanks Thorsten Behrens for report and analysis)
doc:
  o working html doc generation from TEX sources
  o SPARC32 (v7/v8) calling convention description
  o SPARC64 (v9) calling convention description
bindings:
  o better documentation, removed relative path dependencies, general cleanup
  o python: updated to latest signature format (was still on 0.1)
  o java: rewritten (old version was never complete, anyways)
buildsys:
  o cmake: made to work on systems without C++ compiler (thanks Franklin Mathieu)

Version 0.9 (2015/12/31)
dyncall:
  o ARM64 support (AAPCS64 on Linux & Apple's derived version on iOS)
  o armhf calling convention support for ARM32
  o PPC64 support, including syscalls (thanks Masanori!)
  o introduced dcArgF and dcVArgF for flexible/convenient argument binding (works like dcCallF/dcVCallF but without the function call)
  o using -fPIC by default for FreeBSD
  o PPC32 linux syscall support
  o fixed return value errors for ARM32 on some platforms (e.g. freebsd/arm32, nintendo ds); arm & thumb mode
dyncallback:
  o ARM64 support (AAPCS64 on Linux, Apple's derived version on iOS)
  o armhf calling convention support for ARM32
  o PPC64 support (thanks Masanori!)
  o PPC32 System V support (Linux)
  o fix for PPC32 Darwin/OS X
  o more intuitive specification of callback return type
doc: